[2024.04.22] index boardList css 수정

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             </section>
             <section class="main-section">
                 <article class="category-section">
-                    <h2 class="category-txt"><a href="boardList.html">Q&A</a></h2>
+                    <h2 class="category-txt click"><a href="boardList.html">Q&A</a></h2>
                     <div class="category-wrap">  
                         <div class="category-box">
                             <div class="category">
