[2024.05.02] board.js생성 및 script 작성, index/boardList css수정

--- a/boardList.html
+++ b/boardList.html
@@ -312,7 +312,7 @@
                                     <span class="m-date-time">2분 전</span></a>
                                 </div>     
                                 <div class="border-title-section">
-                                    <h3 class="border-title"><a href="javascript:void(0)">java 독학이 가능할까요?</a></h3>
+                                    <h3 class="border-title"><a href="board.html" style="color: red;">java 독학이 가능할까요?</a></h3>
                                     <div class="border-detail">
                                         사정상 국비교육은 듣지 못하고 있는 상황입니다. 혹시 자바 독학해서 취업하신 분들 계실까요?
                                     </div>
