--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                                 </div>
                             </div>    
                             <div class="border-title-section">
-                                <h3 class="border-title"><a href="javascript:void(0)">java 독학이 가능할까요?</a></h3>
+                                <h3 class="border-title"><a href="board.html" style="color: red;">java 독학이 가능할까요?</a></h3>
                             </div>
                         </div>
 
