--- a/boardList.html
+++ b/boardList.html
@@ -113,7 +113,7 @@
                                 <span class="writer-nick-name">불광동개발자</span>
                             </div>
                             <div class="writer-ranking-count">
-                                <i class="fa-solid fa-medal" class=""></i>
+                                <i class="fa-solid fa-medal"></i>
                                 <span class="ranking-count">358</span>                                
                             </div>                            
                         </div>
@@ -195,10 +195,10 @@
                         </ul>
                         <div class="order-section">                          
                             <select  class="order-ul">
-                                <option class="order-li"><a href="javascript:void(0)">최신순</a></option>
-                                <option class="order-li"><a href="javascript:void(0)">추천순</a></option>
-                                <option class="order-li"><a href="javascript:void(0)">조회순</a></option>
-                                <option class="order-li"><a href="javascript:void(0)">답변순</a></option>                          
+                                <option class="order-li">최신순</option>
+                                <option class="order-li">추천순</option>
+                                <option class="order-li">조회순</option>
+                                <option class="order-li">답변순</option>                          
                             </select >
                         </div>
                     </div><!--tab-section-->
